--- a/implementacion_login/src/views/login.handlebars
+++ b/implementacion_login/src/views/login.handlebars
@@ -9,7 +9,7 @@
                     <form id="loginForm">
                         <div class="form-group">
                             <label>Email</label>
-                            <input type="email" class="form-control" id="email" value="juana@gmail.com" required>
+                            <input type="email" class="form-control" id="email" value="juanita123@gmail.com" required>
                         </div>
                         <div class="form-group">
                             <label>Password</label>
